# rating-api

./: Cargo.toml
docker/: docker-compose.yml
docker/script/: init.sql
src/: main.rs
src/config/: database.rs
src/entities/: rating.rs
src/errors/: errors.rs
src/handlers/: create_rating.rs  list_ratings.rs  mod.rs
src/repository/: mod.rs  rating_repository.rs
src/use_cases/: create_rating.rs  list_ratings.rs
