[package]
name = "rating-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
async-trait = "0.1"
serde = { version = "1.0.210", features = ["derive"] }
tokio = { version = "1.40.0", features = ["full", "rt-multi-thread"] }
uuid = { version = "1.10.0", features = ["v4"] }
sqlx = { version = "0.8", features = [ "runtime-tokio", "postgres", "uuid" ] }
